@@ -10,7 +10,10 @@ Release 0.17.1
 
     HADOOP-3472 MapFile.Reader getClosest() function returns incorrect results
     when before is true (Todd Lipcon via Stack)
- 
+
+    HADOOP-3442. Limit recursion depth in QuickSort to avoid
+    StackOverflowErrors. (cdouglas)
+
 Release 0.17.0 - 2008-05-18
 
   INCOMPATIBLE CHANGES
